<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/pref_category_printer">

        <EditTextPreference
            app:key="printer_name"
            app:title="@string/pref_printer_name"
            app:summary="@string/pref_printer_name_summary"
            app:defaultValue="Xerox WorkCentre 3025"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="printer_ip"
            app:title="@string/pref_printer_ip"
            app:summary="@string/pref_printer_ip_summary"
            app:defaultValue="192.168.0.109"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="printer_port"
            app:title="@string/pref_printer_port"
            app:summary="@string/pref_printer_port_summary"
            app:defaultValue="9100"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_category_diagnostics">

        <Preference
            app:key="test_network"
            app:title="@string/pref_test_network"
            app:summary="@string/pref_test_network_summary" />

        <Preference
            app:key="print_test_page"
            app:title="@string/pref_print_test_page"
            app:summary="@string/pref_print_test_page_summary" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_category_instructions">

        <Preference
            app:key="info"
            app:title="@string/pref_info_title"
            app:summary="@string/pref_info_summary"
            app:selectable="false" />

    </PreferenceCategory>

</PreferenceScreen>
